k8s/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: evaluation
  labels:
    app.kubernetes.io/name: evaluation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: evaluation-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: evaluation-service
    spec:
      containers:
      - name: evaluation-service
        image: 657333849558.dkr.ecr.us-east-1.amazonaws.com/tooglemaster/evaluation-service:latest
        ports:
        - containerPort: 8004
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1500m"
            memory: "512Mi"
