k8s/evaluation-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation
spec:
  selector:
    app.kubernetes.io/name: evaluation-service
  ports:
  - name: http
    protocol: TCP
    port: 8004
    targetPort: 8004
