k8s/evaluation-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evaluation-service-ingress
  namespace: evaluation
spec:
  ingressClassName: nginx
  rules:
  - host: tooglemaster.com.br
    http:
      paths:
      - path: /evaluate
        pathType: Prefix
        backend:
          service:
            name: evaluation-service
            port:
              number: 8004
